# gfx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: almost_equals.cpp  canvas.cpp  circle.cpp  clock.cpp  constants.cpp  exe1.cpp  gfx.cpp  mat.cpp  mat_tests.cpp  meta.cpp  object.cpp  ray.cpp  ray_tests.cpp  raytracer.cpp  scalar.cpp  sphere.cpp  types.cpp  vec.cpp  vec_tests.cpp
